[gd_scene load_steps=3 format=3 uid="uid://4efi72m083dt"]

[ext_resource type="Script" path="res://Scripts/UI/SettingsMenu.gd" id="1_sanyy"]
[ext_resource type="AudioStream" uid="uid://b4puqshjtcnwi" path="res://Assets/Audio/Music/GrimAtmosphere.mp3" id="2_82bs7"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sanyy")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.347222
anchor_top = 0.154321
anchor_right = 0.694444
anchor_bottom = 0.771605
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume
"

[node name="MasterSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.001

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Music Volume
"

[node name="MusicSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Label3" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "SFX Volume
"

[node name="SFXSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="SettingsMusic" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("2_82bs7")
autoplay = true
bus = &"Music"

[connection signal="value_changed" from="PanelContainer/VBoxContainer/MasterSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
